--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,4 +11,6 @@
     <dimen name="dimen_32dp">32dp</dimen>
     <dimen name="dimen_36dp">36dp</dimen>
     <dimen name="dimen_40dp">40dp</dimen>
+
+    <dimen name="home_icon_dimen">40dp</dimen>
 </resources>
